k8s/runner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: runner
  labels:
    app: runner
spec:
  replicas: 1 # Default from docker-compose.yml: ${RUNNER_REPLICAS:-2}
  selector:
    matchLabels:
      app: runner
  template:
    metadata:
      labels:
        app: runner
    spec:
      containers:
        - name: runner
          image: myoung34/github-runner:latest
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
